# craftax-trajectories

./: .gitignore  INSTALL.sh  LICENSE  QUICKSTART.md  README.md  analyze_trajectories.py  environment.yml  install_mac_arm64.sh  pyproject.toml  requirements.txt  truncate_to_floor2.py  visualize_trajectory.py
examples/: README.md
recorder/: __init__.py  play.py  utils.py
